# BLAHengine

./: .gitignore  .gitmodules  BLAengine.sln  CMakeLists.txt  LICENSE.md  README.md  ReadMe.md  ReadMe.txt  imgui.ini  sponza.blaScene
Common/: BLAReference.h  BLASingleton.h  BLAStringID.h  BLATime.h  BitArray.h  CircularBuffer.h  DynamicBitArray.h  Pointer.h  ProjectExport.h  RenderBackend.h  SillyMacros.h  StdInclude.h  System.h  Types.h
Demos/: CMakeLists.txt  GeneratedProjectDefinition.h  TestComponent.cpp
Editor/: BLAEditor.cpp  CMakeLists.txt  CameraControl.cpp  CameraControl.h  EditorCommands.cpp  EditorCommands.h  EditorComponentLibrariesManager.cpp  EditorComponentLibrariesManager.h  EditorSession.cpp  EditorSession.h  GeneratedProjectDefinition.h  GizmoManager.cpp  GizmoManager.h  SceneEditor.cpp  SceneEditor.h
Editor/AssetsImport/: BVHImport.cpp  BVHImport.h  OBJImport.cpp  OBJImport.h
Editor/EditorGui/: GameObjectInspectorGui.cpp  GameObjectInspectorGui.h  InspectableVariablesGuiElements.cpp  InspectableVariablesGuiElements.h  RenderPassEditorGui.cpp  RenderPassEditorGui.h  SceneGraphGui.cpp  SceneGraphGui.h
Editor/Rendering/: ShaderGenerator.cpp  ShaderGenerator.h
Engine/: CMakeLists.txt  EngineInstance.cpp  EngineInstance.h  GeneratedProjectDefinition.h
Engine/Animation/: AnimationComponent.cpp  AnimationComponent.h  SkeletonAnimationData.cpp  SkeletonAnimationData.h
Engine/Animation/IK/: IKComponent.cpp  IKComponent.h  IKHelpers.cpp  IKTools.cpp  IKTools.h
Engine/Assets/: Asset.h  AssetsManager.cpp  AssetsManager.h  JSONSerializers.cpp  JSONSerializers.h  Material.cpp  Material.h  MaterialSerializer.h  MathSerializer.h  MeshAsset.h  MeshSerializer.cpp  MeshSerializer.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h  TextureSerializer.h
Engine/Core/: BehaviorComponent.cpp  BehaviorComponent.h  CameraComponent.cpp  CameraComponent.h  ComponentContainers.cpp  ComponentContainers.h  ComponentLibraries.cpp  ComponentLibraries.h  ComponentSystems.cpp  ComponentSystems.h  ComponentSystemsScheduler.cpp  ComponentSystemsScheduler.h  DebugDraw.cpp  DebugDraw.h  GameComponent.cpp  GameComponent.h  GameObject.cpp  GameObject.h  InspectableVariables.cpp  InspectableVariables.h  RenderingManager.cpp  RenderingManager.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h  TransformComponent.cpp  TransformComponent.h
Engine/Core/trunk_to_think_about/: InspectableVariable2.cpp  InspectableVariable2.h
Engine/Geometry/: PrimitiveGeometry.cpp  PrimitiveGeometry.h  TriangleMesh.cpp  TriangleMesh.h
Engine/Gui/: BLAImGuiImpl.cpp  DevGui.cpp  DevGuiConsole.h  DevGuiElements.h  DevGuiFileBrowser.h  DevGuiManager.h  DevGuiMenu.h  DevGuiTextEditor.h  DevGuiTextEditor.inc  DevGuiWindow.h  DevTextEditor.h  Gui.cpp  GuiConsole.h  GuiElements.h  GuiFileBrowser.h  GuiManager.h  GuiMenu.h  GuiWindow.h  TextEditor.inc  imgui_bla_impl.cpp
Engine/Physics/: ColliderComponent.cpp  ColliderComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  RigidBodySystem.cpp  RigidBodySystem.h  SimpleHairComponent.cpp  SimpleHairComponent.h
Engine/Physics/CollisionProcessing/: CollisionProcessor.cpp  CollisionProcessor.h  SpatialCoherence.cpp
Engine/Physics/SoftBodies/: SolftBodiesSystem.cpp  SolftBodiesSystem.h
Engine/Renderer/: Buffer.cpp  Buffer.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  GL33Renderer.cpp  GL33Renderer.h  GL33Shader.cpp  GL33Shader.h  LightRender.cpp  LightRender.h  MeshRendererComponent.cpp  MeshRendererComponent.h  PointLightComponent.cpp  PointLightComponent.h  RenderAttachment.h  RenderCamera.cpp  RenderCamera.h  RenderPass.h  Renderer.cpp  Renderer.h  ShadowRender.cpp  ShadowRender.h  VulkanRenderer.cpp  VulkanRenderer.h
Engine/Renderer/GPU/: Buffer.cpp  Buffer.h  DynamicBuffer.cpp  Image.cpp  Image.h  Interface.cpp  Interface.h  RenderPassDescription.h  Resource.cpp  Resource.h  ResourceTypes.h  StaticBuffer.cpp  StaticBuffer.h  Vulkan.cpp  Vulkan.h  VulkanRenderPass.cpp  VulkanRenderPass.h
Engine/Renderer/OpenGL/: GL33Renderer.cpp  GL33Renderer.h  GL33Shader.cpp  GL33Shader.h
Engine/Renderer/Vulkan/: PipelineStateObject.cpp  PipelineStateObject.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h
Engine/Rendering/: DebugDraw.cpp  DebugDraw.h  DirectionalLightComponent.cpp  MeshRendererComponent.cpp  MeshRendererComponent.h  PointLightComponent.cpp  RenderAttachment.h  RenderCamera.cpp  RenderCamera.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  ShadowRender.cpp
Engine/Rendering/Gpu/: DynamicBuffer.cpp  DynamicBuffer.h  Formats.h  Image.cpp  Image.h  Interface.cpp  Interface.h  Opaques.cpp  Opaques.h  RenderAttachment.h  RenderPassAttachment.h  RenderPassDescription.h  RenderPassProgram.h  Resource.cpp  Resource.h  ResourceTypes.h  StaticBuffer.cpp  StaticBuffer.h  Texture.h  Vulkan.cpp  Vulkan.h  VulkanRenderPass.cpp  VulkanRenderPass.h
Engine/System/: Console.cpp  Console.h  InputManager.cpp  InputManager.h  RenderWindow.cpp  RenderWindow.h  Time.h  VulkanRenderWindow.cpp  VulkanRenderWindow.h
Engine/System/ControllerInputs/: Dualshock4.cpp  Dualshock4.h
Engine/System/FileSystem/: Files.cpp  Files.h
Engine/System/Vulkan/: Context.cpp  Context.h  VulkanInterface.cpp  VulkanInterface.h  VulkanRenderWindow.cpp  VulkanRenderWindow.h
Scenes/: empty_scene  floor_scene  hair_scene  no_sky  test_scene
TestGame/: BLATestGame.cpp  CMakeLists.txt  GeneratedProjectDefinition.h
shaders/: Vertex_Shader.glsl
sources/: AnimationDemo.cpp  AnimationDemo.h  BLAengine.cpp  Camera.cpp  Camera.h  Debug.cpp  Debug.h  EditorSession.cpp  EditorSession.h  EngineDemo.cpp  EngineDemo.h  GameChar.cpp  GameInstance.h  GameObject.cpp  GameObject.h  GameObjectRender.h  Graphics.h  HairDemo.cpp  HairDemo.h  Helpers.cpp  Helpers.h  MainDemo.cpp  MainRenderer.cpp  MeshRenderer.cpp  MeshRenderer.h  OBJImport.cpp  OBJImport.h  RayTracerDemo.h  RaytracerDemo.cpp  ReadMe.txt  Renderer.cpp  Renderer.h  RigidBody.cpp  RigidBody.h  Shader.cpp  Shader.h  SharedRessources.cpp  SharedRessources.h  Texture.cpp  (+10 more)
(+562 files in other folders)
